--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,18 @@
     package="cn.edu.sicnu.jz">
 
     <application
+        android:name=".UniteApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecordActivity"></activity>
+        <activity android:name=".HistoryInActivity"></activity>
+        <activity android:name=".HistoryOutActivity" />
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".RecordActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
